Trying to fix ghost padding on iOS.

--- a/_scss/bbg/_home.scss
+++ b/_scss/bbg/_home.scss
@@ -41,18 +41,19 @@
 		:focus {
 			box-shadow: none;
 		}
-
 	}
 
 	.bbg-banner-box{
 		margin: 0 auto;
 		max-width: $site-max-width;
-		padding: {
-			right: $site-margins;
-			bottom: $site-margins/2;
-		}
+		padding-bottom: $site-margins/2;
 		position: absolute;
 			bottom:0;
+
+		@include media($medium-screen) {
+			padding-right: $site-margins;
+		}
+
 
 		.bbg-banner-site-title{
 			color: #FFF;
